# Nockx.Base

./: COPYING  Nockx.Base.sln
Nockx.Base/: Cryptography.cs  EncryptedStream.cs  KeyPair.cs  Nockx.Base.csproj  README.md  StreamExtensions.cs  TODO
Nockx.Base/C++/: CMakeLists.txt  library.cpp  library.h
Nockx.Base/ClassExtensions/: RsaKeyParametersExtension.cs
Nockx.Base/CryptographyTypes/: AesCryptography.cs  MlDsaCryptography.cs  MlKemCryptography.cs  RsaCryptography.cs
Nockx.Base/Util/: DecryptedMessage.cs  Message.cs
